--- a/package.json
+++ b/package.json
@@ -28,13 +28,22 @@
     "@babel/core": "^7.13.16",
     "@babel/runtime": "^7.13.17",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^4.0.1",
+    "@testing-library/react-native": "^7.2.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "^16.14.0"
   },
   "jest": {
-    "preset": "react-native"
+    "verbose": true,
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "setupFiles": [
+      "./jestSetup.js"
+    ]
   }
 }
